DuPont DevSB/src/objects/ConstructionPts__CP_Contact__c.object
<CustomObject>
    <fields>
        <fullName>ConstructionPts__BatchID__c</fullName>
        <label>BatchID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__ContactID__c</fullName>
        <externalId>true</externalId>
        <label>ContactID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ConstructionPts__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Linked to Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Dodge Contacts</relationshipLabel>
        <relationshipName>CP_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Contact_email__c</fullName>
        <label>Contact email</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Contact_extension__c</fullName>
        <label>Contact extension</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Contact_phone__c</fullName>
        <label>Contact phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Contact_title__c</fullName>
        <label>Contact title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Linked_By_Date__c</fullName>
        <label>Linked By Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Linked_By_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Linked By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Dodge_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Related_Companies__c</fullName>
        <label>Companies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Related_Projects__c</fullName>
        <label>Projects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Dodge Contact</label>
    <listViews>
        <fullName>ConstructionPts__All</fullName>
        <columns>NAME</columns>
        <columns>ConstructionPts__Contact__c</columns>
        <columns>ConstructionPts__Contact_title__c</columns>
        <columns>ConstructionPts__Contact_email__c</columns>
        <columns>ConstructionPts__Contact_phone__c</columns>
        <columns>ConstructionPts__Contact_extension__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dodge Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>